# MCP_Web_Automation

./: .env.example  .gitignore  DECISIONS.md  DECISIONS_PART2.md  DECISIONS_Part3.md  README.md  pyproject.toml  requirements.txt
demo/: result_demo2.json  scenario_part1.py  scenario_part2.py
src/: __init__.py  browser.py  errors.py  logging_conf.py  mcp_server.py  scraping_agent.py  scraping_cli.py
src/mcp_web_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/tools/: __init__.py  base.py  click.py  extract_links.py  fill.py  get_html.py  navigate.py  screenshot.py
