[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-web-automation"
version = "0.2.0"
description = "MCP stdio server with Playwright tools + LLM-powered intelligent scraping agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Automation Team" }
]
dependencies = [
  "playwright>=1.44.0",
  "pydantic>=2.7.0",
  "openai>=1.0.0"
]

[project.optional-dependencies]
perf = ["orjson>=3.10.0"]

[project.scripts]
mcp-web-automation = "src.mcp_server:main"
mcp-scraping-agent = "src.scraping_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

